# EV_Charging_Scheduler

./: .dockerignore  .env.example  .env.feeder_rl_demo.example  .gitattributes  .gitignore  DEVELOPMENT_SETUP.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.mobile  README.md  REPO_STRUCTURE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_users_refresh_tokens.py  0002_create_stations.py  0003_create_reservations.py  0004_create_charging_sessions.py  0005_reservation_snapshot.py  0006_password_reset_tokens.py  0007_user_vehicles.py  0008_google_auth_user_sub.py
apps/api/app/: api_responses.py  main.py  mock_data.py  schemas.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/dependencies/: auth.py
apps/api/app/models/: __init__.py  charging_session.py  reservation.py  station.py  user.py  vehicle.py
apps/api/app/repositories/: auth_repository.py  charging_sessions_repository.py  reservations_repository.py  stations_repository.py  vehicles_repository.py
apps/api/app/routers/: auth.py  charger_events.py  charging_sessions.py  mobile_recommendations.py  recommendations.py  reservations.py  stations.py  system.py  vehicles.py
dashboards/sim_dashboard/: README.md  __init__.py  app.py  app_min.py  pyproject.toml
data/: README.md
services/sim_runtime/: README.md  __init__.py  bootstrap_paths.py  demo.py  event_bus.py  main.py  pyproject.toml  runtime_manager.py  storage.py
(+384 files in other folders)
