[project]
name = "ev-smart-charging-api"
version = "0.1.0"
description = "Backend gateway for EV smart charging"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.0,<3.0",
  "pandas>=2.0,<3.0",
  "pyarrow>=23.0.1",
  "streamlit>=1.56.0",
]
