[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-dashboard"
version = "0.1.0"
description = "Standalone Streamlit dashboard for the Dundee simulator runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ev-core",
  "streamlit>=1.37",
  "pandas>=2.0",
  "altair<5",
]

[tool.setuptools]
py-modules = []
