[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-runtime"
version = "0.1.0"
description = "Standalone Dundee simulator runtime service outside apps/**."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ev-core",
  "pandas>=2.0",
  "pydantic>=2.0,<3.0",
]

[tool.setuptools]
py-modules = []
